# create_fake_cnn_model

./: README.md
fake_caffe/: .gitignore  README.md  create_fake_caffe_model.py  create_fake_caffe_model_tiny_yolo_v2.py  cvt_to_ir.sh  step1_cvt_to_ir.sh  step2_cvt_u8.sh
fake_caffe/caffe_test/: CMakeLists.txt  main.cpp  region_yolov2tiny.cpp
fake_caffe/fake_tiny_yolov2/: fake_model.caffemodel  fake_model.prototxt
fake_caffe/ie_test/: CMakeLists.txt  main.cpp  region_yolov2tiny.cpp  zhangcong_detected_object.h  zhangcong_tinyyolo2_post.h
