CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET (TARGET_NAME ie_test)

PROJECT(${TARGET_NAME})

ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(InferenceEngine REQUIRED)
MESSAGE(STATUS "InferenceEngine_LIBRARIES= " ${InferenceEngine_LIBRARIES})

FIND_PACKAGE(OpenCV REQUIRED)

include_directories(
    ${OpenCV_INCLUDE_DIRS} 
	${CMAKE_CURRENT_SOURCE_DIR}
	${InferenceEngine_INCLUDE_DIRS}
	)

ADD_EXECUTABLE(${TARGET_NAME} 
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/region_yolov2tiny.cpp
    )

TARGET_LINK_LIBRARIES(${TARGET_NAME} 
    ${OpenCV_LIBS}
	libdl.so
	${InferenceEngine_LIBRARIES}
	)